# rina-pill-watcher

./: .gitignore  README.md  ROADMAP.md  package.json
.claude/: launch.json
android-src/: PillAlarmReceiver.kt  PillSchedulerPlugin.kt  setup_android.ps1
src/: app.js  i18n.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  scheduler.rs
